:bug: Email template incorrectly includes comments

--- a/.env.example
+++ b/.env.example
@@ -2,8 +2,10 @@
 PORT = 8080
 
 # These URLs (including domain) are used for links in emails
-BASE_URL = "http://localhost:8080" # This server's full URL
-FRONTEND_URL = "http://localhost:3000" # URL for Staart UI
+# This server's full URL
+BASE_URL = "http://localhost:8080" 
+# URL for Staart UI
+FRONTEND_URL = "http://localhost:3000" 
 
 # Secret keys for encryption
 JWT_SECRET = "staart"
